--- a/.hemtt/project.toml
+++ b/.hemtt/project.toml
@@ -1,13 +1,15 @@
 name = "Weapons-Balance-3CBFactions"
 prefix = "wb_3cbfactions"
-author = "johnb43"
-template = "cba"
 mainprefix = "z"
-files = [
+
+[properties]
+author = "johnb43"
+url = "https://github.com/johnb432"
+
+[files]
+include = [
     "CHANGELOG.md",
     "mod.cpp",
     "LICENSE",
     "README.md"
 ]
-folder_optionals = false
-sig_version = 3
